--- a/public-html/index.html
+++ b/public-html/index.html
@@ -1,19 +1,42 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+    <title>Edwin's Art</title>
+    <link rel="stylesheet" href="public/css/bootstrap.min.css">
+    <link rel="stylesheet" href="public/css/style.css">
 </head>
-<body background="giphy.gif" style="background-repeat: no-repeat;background-size: cover;">
-    <div class="container" style="display: flex; justify-content: center">
-        <img src="edwin.gif" name="selfie" class="child">
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">GamerBro</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="/">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/story1.html">Story 1</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/story2.html">Story 2</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+    </nav>
+
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-4">
+                <img src="/public/images/edwin.gif" class="img-fluid" >
+            </div>
+        </div>
     </div>
+
+    <script src="public/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
 
-<script> 
-    var height = window.innerHeight*.97
-    var width = window.innerWidth
-    var img = document.getElementsByName('selfie')[0]
-
-    img.height = height
-</script>
