--- a/public-html/index.html
+++ b/public-html/index.html
@@ -30,13 +30,25 @@
 
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-4">
-                <img src="/public/images/edwin.gif" class="img-fluid" >
-            </div>
+            <img src="/public/images/edwin.gif" class="img-fluid" onload="resize(this)">
         </div>
     </div>
 
     <script src="public/js/bootstrap.bundle.min.js"></script>
+    <script>
+        function resize(img){
+            var imgWidth = img.width
+            var imgHeight = img.height
+
+            img.style.width = `${Number(window.innerWidth)*.85}px`;
+            img.style.height = 'auto'
+            
+            if(img.height > window.innerHeight){
+                img.style.height = `${Number(window.innerHeight)*.85}px`;
+                img.style.width = 'auto'
+            }
+        }
+    </script>
 </body>
 </html>
 
